--- a/example.env
+++ b/example.env
@@ -1,9 +1,8 @@
-NODE_ENV=development
-PORT=4001
+PORT=YOUR-OWN-PORT
 
-DB=academlo_game_store_DB
+DB=YOUR-OWN-DB
 DB_USER=postgres
-DB_PASSWORD=pass1234
+DB_PASSWORD=YOU-OWN-PASS
 DB_HOST=localhost
 DB_PORT=5432
 
